security(apikey): 合并 ApiKeyInfo 与 ApiKeyProperties 为统一 ApiKey 模型
- 删除 ApiKeyInfo、ApiKeyProperties，新建 ApiKey 统一字段
- 缓存、服务、测试、前端全部替换为新模型
- 提供 createSecureCopy()/createCreationResponse() 避免敏感值序列化
- 持久化与缓存逻辑下沉到 ApiKeyService，移除 CachedApiKeyServiceImpl

BREAKING-CHANGES:
  - 接口返回体字段 keyValue 仅在创建时返回，其余均为 null
  - 缓存 Key 由 ApiKeyInfo 改为 ApiKey，Redis 已有缓存失效，需手动清除